--- a/index.html
+++ b/index.html
@@ -3,110 +3,155 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HK Mining</title>
+    <title>AI TERMINAL CORE</title>
     <style>
+        :root {
+            --neon-blue: #00d4ff;
+            --dark-bg: #050505;
+            --glass: rgba(255, 255, 255, 0.03);
+        }
+
         body {
-            background-color: #0a0a0a; /* Очень темный */
-            color: #00d4ff;
-            font-family: 'Segoe UI', sans-serif;
+            background-color: var(--dark-bg);
+            color: var(--neon-blue);
+            font-family: 'Courier New', Courier, monospace;
             margin: 0;
-            overflow: hidden;
+            padding: 20px;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            flex-direction: column;
             height: 100vh;
+            box-sizing: border-box;
+            overflow: hidden;
         }
 
-        /* Символы на фоне (майнинг под стеклом) */
-        #bg-canvas {
+        /* Эффект старого монитора (сканирующие линии) */
+        body::before {
+            content: " ";
             position: absolute;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            z-index: 1;
-            opacity: 0.2;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), 
+                        linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
+            background-size: 100% 2px, 3px 100%;
+            pointer-events: none;
+            z-index: 10;
         }
 
-        .glass-card {
-            background: rgba(255, 255, 255, 0.03);
+        /* Стеклянная панель терминала */
+        .terminal-window {
+            flex-grow: 1;
+            background: var(--glass);
             backdrop-filter: blur(15px);
             -webkit-backdrop-filter: blur(15px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 30px;
-            padding: 40px;
-            text-align: center;
-            z-index: 2;
-            box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.8);
-            width: 80%;
-            max-width: 300px;
-        }
-
-        .balance {
-            font-size: 3rem;
-            font-weight: bold;
-            margin: 20px 0;
-            text-shadow: 0 0 10px #00d4ff;
-        }
-
-        .btn-mine {
-            background: linear-gradient(45deg, #00d4ff, #0055ff);
-            color: white;
-            border: none;
-            padding: 15px 30px;
+            border: 1px solid rgba(0, 212, 255, 0.2);
             border-radius: 15px;
-            font-size: 1.2rem;
-            cursor: pointer;
-            width: 100%;
-            transition: 0.3s;
+            padding: 20px;
+            overflow-y: auto;
+            margin-bottom: 20px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+            display: flex;
+            flex-direction: column;
         }
 
-        .btn-mine:active {
-            transform: scale(0.95);
+        .output {
+            white-space: pre-wrap;
+            margin-bottom: 10px;
+            line-height: 1.4;
+        }
+
+        .input-area {
+            display: flex;
+            background: rgba(0, 0, 0, 0.5);
+            border-radius: 10px;
+            padding: 10px;
+            border: 1px solid rgba(0, 212, 255, 0.1);
+        }
+
+        input {
+            background: transparent;
+            border: none;
+            color: var(--neon-blue);
+            font-family: inherit;
+            font-size: 16px;
+            width: 100%;
+            outline: none;
+        }
+
+        .system-prefix {
+            margin-right: 10px;
+            color: #fff;
+            font-weight: bold;
+        }
+
+        /* Анимация мигания курсора */
+        .cursor {
+            display: inline-block;
+            width: 8px;
+            height: 18px;
+            background: var(--neon-blue);
+            animation: blink 1s infinite;
+            vertical-align: middle;
+        }
+
+        @keyframes blink {
+            50% { opacity: 0; }
         }
     </style>
 </head>
 <body>
-    <canvas id="bg-canvas"></canvas>
 
-    <div class="glass-card">
-        <div style="font-size: 0.9rem; opacity: 0.6;">HK BALANCE</div>
-        <div class="balance" id="hk-balance">0.00</div>
-        <button class="btn-mine" onclick="mine()">MINE HK</button>
-        <p style="font-size: 0.7rem; margin-top: 15px; opacity: 0.4;">Hard Mining: 0.01 per click</p>
+<div class="terminal-window" id="terminal">
+    <div class="output" id="output">
+[SYSTEM BOOT SUCCESSFUL]
+[AI CORE: GEMINI 1.5 FLASH]
+[ENCRYPTION: ENABLED]
+---------------------------
+Введите команду или вопрос...
     </div>
+</div>
 
-    <script>
-        // Код для «падающих» символов майнинга
-        const canvas = document.getElementById('bg-canvas');
-        const ctx = canvas.getContext('2d');
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
+<div class="input-area">
+    <span class="system-prefix">USER@AI_CORE:~$</span>
+    <input type="text" id="userInput" autofocus placeholder="...">
+    <span class="cursor"></span>
+</div>
 
-        const symbols = "HK 0 1 ⚙️ 🛠 💎 ₿";
-        const fontSize = 14;
-        const columns = canvas.width / fontSize;
-        const drops = Array(Math.floor(columns)).fill(1);
+<script>
+    const output = document.getElementById('output');
+    const input = document.getElementById('userInput');
 
-        function draw() {
-            ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
-            ctx.fillStyle = "#00d4ff";
-            ctx.font = fontSize + "px monospace";
+    // ТВОЙ КЛЮЧ ИИ (Лучше сделать запрос через сервер, но для HTML оставим так)
+    const API_KEY = "ВСТАВЬ_СВОЙ_КЛЮЧ_ЗДЕСЬ";
 
-            for (let i = 0; i < drops.length; i++) {
-                const text = symbols.charAt(Math.floor(Math.random() * symbols.length));
-                ctx.fillText(text, i * fontSize, drops[i] * fontSize);
-                if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) drops[i] = 0;
-                drops[i]++;
+    input.addEventListener('keydown', async (e) => {
+        if (e.key === 'Enter' && input.value.trim() !== '') {
+            const text = input.value;
+            input.value = '';
+
+            // Отображаем ввод пользователя
+            output.innerHTML += `\n\n> <span style="color: #fff">${text}</span>`;
+            output.innerHTML += `\n<span style="color: #555">... ANALYZING ...</span>`;
+
+            try {
+                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ contents: [{ parts: [{ text: text }] }] })
+                });
+
+                const data = await response.json();
+                const aiText = data.candidates[0].content.parts[0].text;
+
+                // Печатаем ответ
+                output.innerHTML += `\n\n[AI_RESPONSE]:\n${aiText}`;
+            } catch (err) {
+                output.innerHTML += `\n\n[ERROR]: CONNECTION FAILED.`;
             }
-        }
-        setInterval(draw, 50);
 
-        // Логика баланса
-        let balance = 0;
-        function mine() {
-            balance += 0.01;
-            document.getElementById('hk-balance').innerText = balance.toFixed(2);
+            // Автопрокрутка вниз
+            document.getElementById('terminal').scrollTop = document.getElementById('terminal').scrollHeight;
         }
-    </script>
+    });
+</script>
+
 </body>
-          </html>
+</html>
